--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,28 @@ body {
     color: #262626;
     padding-bottom: 3rem;
 }
-
-img {
-    display: block;
+.container{
+    display:flex;
+    box-sizing:border-box;
 }
+img {
+    display:block;
+    box-sizing: border-box;
+    width:100%;
+    position:relative;
+}
+.gallery{
+    display:grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows:auto auto auto;
+    align-content:justify;
+    align-items:center;
+}
+
+.gallery-item-info{
+    display:flex;
+    justify-content:center;
+    z-index:1;
+}
+
+
