--- a/styles.css
+++ b/styles.css
@@ -17,28 +17,146 @@ body {
     color: #262626;
     padding-bottom: 3rem;
 }
-.container{
-    display:flex;
-    box-sizing:border-box;
+header,main{
+    margin-top:15px;
+    margin-bottom:30px;
 }
-img {
-    display:block;
-    box-sizing: border-box;
-    width:100%;
+
+/*STYLING FOR THE HEADER SECTION*/
+header .container{
+    display:flex;
+    justify-content:center;
     position:relative;
 }
-.gallery{
+
+.profile{
+    width:95%;
     display:grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns:25% auto auto auto;
     grid-template-rows:auto auto auto;
-    align-content:justify;
+    justify-content:center;
+    column-gap:10px;
+}
+
+
+.profile-stats,.profile-user-settings,.profile-bio{
+    grid-column:2/span 4;
+}
+
+.profile-image{
+    grid-row-start:1;
+    grid-row-end:span 3;
+}
+.profile-image img{
+    width:200px;
+    height:90px;
+    border:solid green 1px;
+    border-radius:62px;
+    box-sizing:border-box;
+    object-fit:cover;
+}
+.profile-user-settings{
+    display:flex;
+    justify-content:space-between;
     align-items:center;
 }
 
-.gallery-item-info{
+.profile-stats ul{
     display:flex;
-    justify-content:center;
-    z-index:1;
+    flex-direction:row;
+    flex-wrap:nowrap;
+    justify-content:space-between;
+    align-items:center;
+    align-content:center;
 }
+
+.profile-bio{
+    display:flex;
+    align-content:center;
+    align-items:center;
+    justify-content:center;
+}
+/*END OF HEADER SECTION STYLING*/
+
+
+/*START OF GALLERY SECTION STYLING*/
+main .container{
+    box-sizing:border-box;
+    width:100%;
+    justify-content:center;
+    align-items:center;
+    margin-left:auto;
+    margin-right:auto;
+    width:60%;
+    max-width:70%;
+}
+
+.gallery{
+    display:grid;
+    grid-template-columns:auto auto auto;
+    grid-template-rows:auto auto auto;
+    width:80%;
+    max-width:100%;
+    height:100%;
+    gap:2px 2px;
+    justify-content:center;
+    align-items:center;
+    margin-left:auto;
+    margin-right:auto;
+}
+  
+img {
+    display:inline-block;
+    box-sizing: border-box;
+    width:100%;
+    height:150px;
+    object-fit:contain;
+}
+.gallery-item{
+    position:relative;
+}
+.gallery div:nth-child(7) img, .gallery div:nth-child(12) img{
+    object-fit:cover;
+}
+.gallery-item:hover .gallery-item-info{
+    visibility: visible;
+    background:rgba(0,0,0,0.4);
+    color:white;
+    transition:opacity .5s ease ;
+}
+
+li[class*="comment"],li[class*="like"],fa,fa>i{
+    display:inline-block;
+    align-content:center;
+    padding:6px;
+    transform:scale(1.3,1.3);
+}
+
+.gallery-item-info{
+    position:absolute;
+    transform:translate(-50%,-50%);
+    top:50%;
+    left:50%;
+    width:100%;
+    height:100%;
+    margin-left:auto; 
+    margin-right:auto;
+    display:flex;
+    justify-content: center;
+    align-content:center;
+    align-items:center;
+    padding:4px;
+    z-index:1;
+    background:transparent;
+    visibility:hidden;
+}
+
+.gallery .gallery-item-type, .gallery .visually-hidden{
+    display:none;
+}
+li{
+    list-style-type:none;
+}
+/* END OF STYLING FOR THE GALLERY SECTION*/
 
 
