--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,15 @@ header .container{
     grid-row-end:span 3;
 }
 .profile-image img{
-    width:200px;
-    height:90px;
-    border:solid green 1px;
-    border-radius:62px;
+    width:150px;
+    height:150px;
+    border:solid green 6px;
+    border-radius:50%;
+    padding:8px;
     box-sizing:border-box;
     object-fit:cover;
 }
+
 .profile-user-settings{
     display:flex;
     justify-content:space-between;
