--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header,main{
 
 /*STYLING FOR THE HEADER SECTION*/
 header .container{
+    height:200px;
     display:flex;
     justify-content:center;
     position:relative;
@@ -37,7 +38,6 @@ header .container{
     justify-content:center;
     column-gap:0px;
 }
-
 
 .profile-stats,.profile-user-settings,.profile-bio{
     grid-column:2/span 4;
@@ -79,6 +79,31 @@ header .container{
     justify-content:center;
 }
 /*END OF HEADER SECTION STYLING*/
+
+
+
+/*MEDIA QUERIES*/
+@media screen and(max-width:400px){
+   .profile{ width:95%;
+    display:grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows:auto auto auto auto;
+    justify-content:center;
+    column-gap:0px;
+   }
+   .profile-stats,.profile-user-settings,.profile-bio,.profile-image{
+    grid-column:1/span 3;
+}
+.profile-image{
+    grid-row-start:1;
+    grid-row-end:span 3;
+    justify-content:center;
+    align-items:center;
+    
+}   
+}
+/*END OF MEDIA QUERIES*/
+
 
 
 /*START OF GALLERY SECTION STYLING*/
@@ -161,4 +186,36 @@ li{
 }
 /* END OF STYLING FOR THE GALLERY SECTION*/
 
+/*Creating an animation for the loader*/
+.loader{
+    width:40px;
+    height:40px;
+    position:absolute;
+    top:125%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    display:flex;
+    justify-content:center;
+    align-items:center;   
+}
+.loader::after{
+    content:"";
+    width:40px;
+    height:40px;
+    border:solid 4px green;
+    border-top-color:white;
+    border-radius:50%;
+    animation-name:activateLoader;
+    animation-duration:0.75s;
+    animation-timing-function:ease;
+    animation-iteration-count: infinite;
+}
 
+@keyframes activateLoader{
+    from{
+            transform:rotate(0turn);
+        }
+    to{
+            transform:rotate(1turn);
+    }
+}
